# music_recommender

./: README.md  environment.yml  pyproject.toml  setup.cfg
paper/: music_recommender.tex  music_recommender_pres.tex  task_paper.py
src/music_recommender/analysis/: task_analysis.py
src/music_recommender/data_management/: __init__.py  task_data_management.py
src/music_recommender/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
